--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Partime | Work Your Way</title>
+  <title>OnlyJobs | Work Your Way</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-ku9kS2VvHGKcSJklbSTxNfZb6buYsQZfVjWLUYl0F2pZ+UcQZ+g9Unu9cxUQD+XbJz5W4KczWcKyPNij1hYyKA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
@@ -17,7 +17,7 @@
     <div class="container header-container">
       <div class="logo" onclick="window.scrollTo({top:0,behavior:'smooth'})">
         <i class="fas fa-briefcase logo-icon"></i>
-        Partime
+        OnlyJobs
       </div>
       <nav>
         <div class="nav-link" onclick="document.getElementById('features').scrollIntoView({behavior:'smooth'})">Features</div>
@@ -177,7 +177,7 @@
         <div class="testimonial">
           <div class="testimonial-quote">
             <i class="fas fa-quote-left"></i>
-            <p>"Partime helped me find a job at the campus library that perfectly fits around my schedule. The application process was super easy!"</p>
+            <p>"OnlyJobs helped me find a job at the campus library that perfectly fits around my schedule. The application process was super easy!"</p>
           </div>
           <div class="testimonial-author">
             <div class="author-avatar">
@@ -193,7 +193,7 @@
         <div class="testimonial">
           <div class="testimonial-quote">
             <i class="fas fa-quote-left"></i>
-            <p>"I was able to find a research assistant position in my department through Partime. It's relevant to my major and the flexible hours are perfect!"</p>
+            <p>"I was able to find a research assistant position in my department through OnlyJobs. It's relevant to my major and the flexible hours are perfect!"</p>
           </div>
           <div class="testimonial-author">
             <div class="author-avatar">
@@ -226,10 +226,10 @@
         <div class="footer-brand">
           <div class="footer-logo">
             <i class="fas fa-briefcase logo-icon"></i>
-            Partime
+            OnlyJobs
           </div>
           <p class="footer-desc">
-            Partime helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
+            OnlyJobs helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
           </p>
           <div class="footer-social">
             <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -271,7 +271,7 @@
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2025 Partime. All rights reserved.</p>
+        <p>&copy; 2025 OnlyJobs. All rights reserved.</p>
       </div>
     </div>
   </footer>
