--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register | OnlyJobs</title>
+  <title>Register | OnlyWork</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-ku9kS2VvHGKcSJklbSTxNfZb6buYsQZfVjWLUYl0F2pZ+UcQZ+g9Unu9cxUQD+XbJz5W4KczWcKyPNij1hYyKA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
@@ -17,7 +17,7 @@
     <div class="container header-container">
       <div class="logo" onclick="location.href='index.html'">
         <i class="fas fa-briefcase logo-icon"></i>
-        OnlyJobs
+        OnlyWork
       </div>
       <nav>
         <div class="nav-link" onclick="location.href='index.html#features'">Features</div>
@@ -34,7 +34,7 @@
   <section class="page-content">
     <div class="container">
       <div class="form-container" id="form-container">
-        <h1 class="page-title">Join OnlyJobs</h1>
+        <h1 class="page-title">Join OnlyWork</h1>
         <p class="page-subtitle">Register to find part-time jobs that fit your schedule</p>
         
         <form id="registration-form" class="registration-form">
@@ -230,7 +230,7 @@
       <div class="success-message" id="success-message" style="display: none;">
         <i class="fas fa-check-circle success-icon"></i>
         <h2 class="success-title">Application Submitted!</h2>
-        <p class="success-text">Thank you for registering with OnlyJobs! We'll start matching you with job opportunities that fit your schedule and interests.</p>
+        <p class="success-text">Thank you for registering with OnlyWork! We'll start matching you with job opportunities that fit your schedule and interests.</p>
         <div class="success-buttons">
           <button class="btn btn-primary" onclick="location.href='index.html'">
             <i class="fas fa-home"></i>
@@ -247,10 +247,10 @@
         <div class="footer-brand">
           <div class="footer-logo">
             <i class="fas fa-briefcase logo-icon"></i>
-            OnlyJobs
+            OnlyWork
           </div>
           <p class="footer-desc">
-            OnlyJobs helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
+            OnlyWork helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
           </p>
           <div class="footer-social">
             <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
@@ -292,7 +292,7 @@
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2025 OnlyJobs All rights reserved.</p>
+        <p>&copy; 2025 OnlyWork All rights reserved.</p>
       </div>
     </div>
   </footer>
