--- a/register.html
+++ b/register.html
@@ -324,7 +324,7 @@
       border: 1px solid #333;
       border-radius: 50px;
       cursor: pointer;
-      transition: all 0.3s ease;
+      /*transition: all 0.3s ease;*/
       color: #333;
       font-family: var(--monospace-font);
     }
@@ -736,7 +736,7 @@
     }
     
     /* Animations */
-    @keyframes fadeIn {
+   /* @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
     }
