--- a/index.html
+++ b/index.html
@@ -234,16 +234,27 @@
             OnlyWork helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
           </p>
             <div class="footer-social">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/107253271/admin/dashboard/" class="social-icon" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-medium"></i></a>
-            </div>
-        </div>
-        
+  <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+  <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+  <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.linkedin.com/company/107253271/admin/dashboard/" class="social-icon linkedin-img-icon" target="_blank">
+    <img src="https://your-company-logo-url.jpg" alt="LinkedIn" class="icon-img">
+  </a>
+</div>
+
+<style>
+.linkedin-img-icon {
+  padding: 0;
+  overflow: hidden;
+}
+
+.icon-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+</style>
         <div class="footer-links">
           <h4>Company</h4>
           <ul class="footer-menu">
