--- a/register.html
+++ b/register.html
@@ -979,10 +979,7 @@
             OnlyWork helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
           </p>
           <div class="footer-social">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/company/only-jobs-students/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
         
