--- a/register.html
+++ b/register.html
@@ -743,8 +743,9 @@
   <header id="header">
     <div class="container header-container">
       <div class="logo" onclick="window.scrollTo({top:0,behavior:'smooth'})">
-        <i class="fas fa-briefcase logo-icon"></i>
-        OnlyWork
+        <i class="fas fa-briefcase logo-icon" onclick="location.href='register.html'">
+         OnlyWork
+        </i>
       </div>
       <nav>
         <div class="nav-link" onclick="document.getElementById('features').scrollIntoView({behavior:'smooth'})">Features</div>
