--- a/register.html
+++ b/register.html
@@ -743,14 +743,14 @@
   <header id="header">
     <div class="container header-container">
       <div class="logo" onclick="window.scrollTo({top:0,behavior:'smooth'})">
-        <i class="fas fa-briefcase logo-icon" onclick="location.href='register.html'">
+        <div class="nav-link" onclick="location.href='index.html'">
          OnlyWork
-        </i>
+        </div>
       </div>
       <nav>
-        <div class="nav-link" onclick="document.getElementById('features').scrollIntoView({behavior:'smooth'})">Features</div>
-        <div class="nav-link" onclick="document.getElementById('testimonials').scrollIntoView({behavior:'smooth'})">Testimonials</div>
-        <div class="nav-link" onclick="document.getElementById('cta').scrollIntoView({behavior:'smooth'})">Get Started</div>
+        <div class="nav-link" onclick="location.href='index.html'">Features</div>
+        <div class="nav-link" onclick="location.href='index.html'">Testimonials</div>
+        <div class="nav-link" onclick="location.href='index.html'">Get Started</div>
         <div class="nav-link" onclick="location.href='register.html'">Register</div>
       </nav>
       <button class="btn btn-primary" onclick="location.href='register.html'">
