--- a/register.html
+++ b/register.html
@@ -742,21 +742,16 @@
 <body>
   <header id="header">
     <div class="container header-container">
-      <div class="logo" onclick="window.scrollTo({top:0,behavior:'smooth'})">
-        <div class="nav-link" onclick="location.href='index.html'">
-         OnlyWork
-        </div>
+      <div class="logo" onclick="location.href='index.html'">
+        <i class="fas fa-briefcase logo-icon"></i>
+        OnlyWork
       </div>
       <nav>
-        <div class="nav-link" onclick="location.href='index.html'">Features</div>
-        <div class="nav-link" onclick="location.href='index.html'">Testimonials</div>
-        <div class="nav-link" onclick="location.href='index.html'">Get Started</div>
-        <div class="nav-link" onclick="location.href='register.html'">Register</div>
+        <div class="nav-link" onclick="location.href='index.html#features'">Features</div>
+        <div class="nav-link" onclick="location.href='index.html#testimonials'">Testimonials</div>
+        <div class="nav-link" onclick="location.href='index.html'">Home</div>
+        <div class="nav-link active">Register</div>
       </nav>
-      <button class="btn btn-primary" onclick="location.href='register.html'">
-        <i class="fas fa-user-plus"></i>
-        Sign Up
-      </button>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
@@ -984,7 +979,13 @@
             OnlyWork helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
           </p>
           <div class="footer-social">
-            <a href="https://www.linkedin.com/company/only-jobs-students/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/107253271/admin/dashboard/" class="social-icon" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-medium"></i></a>
           </div>
         </div>
         
