--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
   </section>
 
-<!-- Resume Roaster Section -->
+<!-- Resume Roaster Section - Dark Theme Matched -->
 <section class="resume-roaster" id="resume-roaster">
   <div class="container">
     <h2 class="section-title">Resume Roaster</h2>
@@ -288,7 +288,6 @@
     </div>
   </div>
 </section>
-
 <footer>
     <div class="container">
       <div class="footer-content">
