--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
   </section>
 
-<!-- Resume Roaster Section - Dark Theme Matched -->
+<!-- Fixed Resume Roaster Section - Dark Theme -->
 <section class="resume-roaster" id="resume-roaster">
   <div class="container">
     <h2 class="section-title">Resume Roaster</h2>
@@ -257,12 +257,12 @@
       </div>
     </div>
     
-    <div id="loadingRoast" class="loading-roast">
+    <div id="loadingRoast" class="loading-roast" style="display:none;">
       <div class="spinner"></div>
       <p>Preparing your roast... This could take a minute. Our AI is sharpening its wit.</p>
     </div>
     
-    <div id="roastResults" class="roast-results">
+    <div id="roastResults" class="roast-results" style="display:none;">
       <h3>Your Resume Roast</h3>
       <div class="roast-content">
         <div class="score-container">
@@ -288,6 +288,7 @@
     </div>
   </div>
 </section>
+
 <footer>
     <div class="container">
       <div class="footer-content">
