--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
   </section>
 
-<!-- Fixed Resume Roaster Section - Dark Theme -->
+<!-- Updated Resume Roaster HTML -->
 <section class="resume-roaster" id="resume-roaster">
   <div class="container">
     <h2 class="section-title">Resume Roaster</h2>
