--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
   </section>
 
-<!-- Updated Resume Roaster HTML -->
+<!-- Resume Roaster Section - Corrected -->
 <section class="resume-roaster" id="resume-roaster">
   <div class="container">
     <h2 class="section-title">Resume Roaster</h2>
