--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   </section>
 
 <!-- Resume Roaster Section - Corrected -->
-<section class="resume-roaster" id="resume-roaster">
+<!-- <section class="resume-roaster" id="resume-roaster">
   <div class="container">
     <h2 class="section-title">Resume Roaster</h2>
     <p class="section-subtitle">Get brutally honest feedback on your resume. We don't sugarcoat.</p>
@@ -287,19 +287,8 @@
       </div>
     </div>
   </div>
-</section>
-
-<div style="margin: 50px; padding: 20px; border: 2px solid red;">
-  <h3>Test File Upload</h3>
-  <input type="file" id="testFileInput">
-  <script>
-    document.getElementById('testFileInput').addEventListener('change', function() {
-      console.log("Test file selected:", this.files[0]);
-      alert("File selected: " + this.files[0].name);
-    });
-  </script>
-</div>
-
+</section>  -->
+  
 <footer>
     <div class="container">
       <div class="footer-content">
