--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div class="nav-link" onclick="document.getElementById('features').scrollIntoView({behavior:'smooth'})">Features</div>
         <div class="nav-link" onclick="document.getElementById('testimonials').scrollIntoView({behavior:'smooth'})">Testimonials</div>
         <div class="nav-link" onclick="document.getElementById('cta').scrollIntoView({behavior:'smooth'})">Get Started</div>
-        <div class="nav-link" onclick="location.href='register.html'">Register</div>
+        <div class="nav-link" onclick="location.href='register'">Register</div>
       </nav>
-      <button class="btn btn-primary" onclick="location.href='register.html'">
+      <button class="btn btn-primary" onclick="location.href='register'">
         <i class="fas fa-user-plus"></i>
         Sign Up
       </button>
@@ -43,7 +43,7 @@
         <h1 class="hero-title">Work On Your Terms</h1>
         <p class="hero-subtitle">Discover flexible, campus-based and local part-time jobs that fit your schedule. Apply instantly and connect directly with employers.</p>
         <div class="hero-btns">
-          <button class="btn btn-primary" onclick="location.href='register.html'">
+          <button class="btn btn-primary" onclick="location.href='register'">
             <i class="fas fa-rocket"></i>
             Start Now
           </button>
@@ -215,7 +215,7 @@
     <div class="container">
       <h2 class="cta-title">Ready to Start Earning?</h2>
       <p class="cta-subtitle">Join thousands of students who are balancing studies and work on their own terms</p>
-      <button class="btn btn-cta" onclick="location.href='register.html'">
+      <button class="btn btn-cta" onclick="location.href='register'">
         <i class="fas fa-rocket"></i>
         Get Started Now
       </button>
