--- a/register/register.html
+++ b/register/register.html
@@ -844,17 +844,16 @@
 </head>
 <body>
   <header id="header">
-    <div class="container header-container">
-      <div class="logo" onclick="location.href='index.html'">
-        <i class="fas fa-briefcase logo-icon"></i>
-        OnlyWork
-      </div>
-      <nav>
-        <div class="nav-link" onclick="location.href='index.html#features'">Features</div>
-        <div class="nav-link" onclick="location.href='index.html#testimonials'">Testimonials</div>
-        <div class="nav-link" onclick="location.href='index.html'">Home</div>
-        <div class="nav-link active">Register</div>
-      </nav>
+    <div class="logo" onclick="location.href='/'">
+      <i class="fas fa-briefcase logo-icon"></i>
+      OnlyWork
+    </div>
+    <nav>
+      <div class="nav-link" onclick="location.href='/#features'">Features</div>
+      <div class="nav-link" onclick="location.href='/#testimonials'">Testimonials</div>
+      <div class="nav-link" onclick="location.href='/'">Home</div>
+      <div class="nav-link active">Register</div>
+    </nav>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
@@ -1061,9 +1060,9 @@
         <h2 class="success-title">Application Submitted!</h2>
         <p class="success-text">Thank you for registering with OnlyWork! We'll start matching you with job opportunities that fit your schedule and interests.</p>
         <div class="success-buttons">
-          <button class="btn btn-primary" onclick="location.href='index.html'">
+          <button class="btn btn-primary" onclick="location.href='/'">
             <i class="fas fa-home"></i>
-            Return to Homepage
+              Return to Homepage
           </button>
         </div>
       </div>
