--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                 <li><a href="/">For Students</a></li>
                 <li><a href="/employer">For Employers</a></li>
             </ul>
-            <a href="/employer-register" class="cta-button">Start Hiring</a>
+            <a href="/employer_register.html" class="cta-button">Start Hiring</a>
             <div class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
