--- a/employer_register.html
+++ b/employer_register.html
@@ -693,7 +693,7 @@
               </div>
             </div>
             
-            <div class="form-group">
+           <!-- <div class="form-group">
               <label for="company-website" class="form-label">Company Website (Optional)</label>
               <input type="url" id="company-website" class="form-input" placeholder="https://yourcompany.com">
             </div>
@@ -702,7 +702,7 @@
               <label for="company-description" class="form-label">About Your Company</label>
               <textarea id="company-description" class="form-textarea" placeholder="Tell students about your company culture, mission, and what makes you a great place to work..." required></textarea>
             </div>
-          </div>
+          </div> -->
           
           <!-- Contact Information -->
           <div class="form-section">
@@ -833,7 +833,7 @@
           <div class="form-buttons">
             <button type="submit" class="btn btn-primary btn-submit">
               <i class="fas fa-building"></i>
-              Create Employer Account
+              Submit Employer Registration
             </button>
           </div>
         </form>
@@ -843,7 +843,7 @@
       <div class="success-message" id="success-message" style="display: none;">
         <i class="fas fa-check-circle success-icon"></i>
         <h2 class="success-title">Welcome to OnlyWork!</h2>
-        <p class="success-text">Your employer account has been created successfully. We'll review your information and activate your account within 24 hours. You'll receive an email with next steps.</p>
+        <p class="success-text">Your employee is on their way! You'll receive an email with next steps.</p>
         <div class="success-buttons">
           <button class="btn btn-primary" onclick="location.href='/employer-dashboard'">
             <i class="fas fa-tachometer-alt"></i>
