--- a/employer_register.html
+++ b/employer_register.html
@@ -693,7 +693,7 @@
               </div>
             </div>
             
-           <!-- <div class="form-group">
+           <div class="form-group">
               <label for="company-website" class="form-label">Company Website (Optional)</label>
               <input type="url" id="company-website" class="form-input" placeholder="https://yourcompany.com">
             </div>
@@ -702,7 +702,7 @@
               <label for="company-description" class="form-label">About Your Company</label>
               <textarea id="company-description" class="form-textarea" placeholder="Tell students about your company culture, mission, and what makes you a great place to work..." required></textarea>
             </div>
-          </div> -->
+          </div>
           
           <!-- Contact Information -->
           <div class="form-section">
