--- a/employer_register.html
+++ b/employer_register.html
@@ -694,9 +694,15 @@
             </div>
             
            <div class="form-group">
-              <label for="company-website" class="form-label">Company Website (Optional)</label>
-              <input type="url" id="company-website" class="form-input" placeholder="https://yourcompany.com">
-            </div>
+  <label for="company-website" class="form-label">Company Website (Optional)</label>
+  <input 
+    type="text" 
+    id="company-website" 
+    class="form-input" 
+    placeholder="https://yourcompany.com"
+  />
+</div>
+
             
             <div class="form-group">
               <label for="company-description" class="form-label">About Your Company</label>
