--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
-                <li><a href="#pricing">Pricing</a></li>
+                <!--<li><a href="#pricing">Pricing</a></li>-->
                 <li><a href="#testimonials">Success Stories</a></li>
                 <li class="divider"></li>
                 <li><a href="/">For Students</a></li>
@@ -616,7 +616,7 @@
             </div>
         </section>
 
-        <section class="pricing" id="pricing">
+       <!-- <section class="pricing" id="pricing">
             <div class="container">
                 <h2 class="section-title">Simple, Transparent Pricing</h2>
                 <p class="section-subtitle">Choose the plan that fits your hiring needs. No hidden fees, no long-term contracts.</p>
@@ -667,7 +667,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="testimonials" id="testimonials">
             <div class="container">
