--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
                 <!--<li><a href="#pricing">Pricing</a></li>-->
                 <li><a href="#testimonials">Success Stories</a></li>
                 <li class="divider"></li>
-                <li><a href="/">For Students</a></li>
-                <li><a href="/employer">For Employers</a></li>
+                <li><a href="/studnet.html">For Students</a></li>
+                <li><a href="/index.html">For Employers</a></li>
             </ul>
             <a href="/employer_register.html" class="cta-button">Start Hiring</a>
             <div class="mobile-menu-btn">
