--- a/student.html
+++ b/student.html
@@ -25,7 +25,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#testimonials">Success Stories</a></li>
                 <li class="divider"></li>
-                <li><a href="/studnet.html">For Students</a></li>
+                <li><a href="/student.html">For Students</a></li>
                 <li><a href="/index.html">For Employers</a></li>
             </ul>
             <a href="/employer_register.html" class="cta-button">Start Hiring</a>
