--- a/student.html
+++ b/student.html
@@ -28,7 +28,7 @@
                 <li><a href="/student.html">For Students</a></li>
                 <li><a href="/index.html">For Employers</a></li>
             </ul>
-            <a href="/employer_register.html" class="cta-button">Start Hiring</a>
+            <a href="/register.html" class="cta-button">Apply Now</a>
             <div class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
             </div>
