--- a/register.html
+++ b/register.html
@@ -19,20 +19,23 @@
 </head>
 <body>
   <header id="header">
-    <div class="logo" onclick="location.href='/'">
-      <i class="fas fa-briefcase logo-icon"></i>
-      OnlyWork
-    </div>
-    <nav>
-      <div class="nav-link" onclick="location.href='/#features'">Features</div>
-      <div class="nav-link" onclick="location.href='/#testimonials'">Testimonials</div>
-      <div class="nav-link" onclick="location.href='/'">Home</div>
-      <div class="nav-link active">Register</div>
-    </nav>
+    <nav class="container">
+      <a href="/" class="logo">
+        <i class="fas fa-briefcase"></i>
+        OnlyWorks
+      </a>
+      <ul class="nav-links">
+        <li><a href="#features">Features</a></li>
+        <li><a href="#testimonials">Success Stories</a></li>
+        <li class="divider"></li>
+        <li><a href="/student.html">For Students</a></li>
+        <li><a href="/index.html">For Employers</a></li>
+      </ul>
+      <a href="/register.html" class="cta-button">Apply Now</a>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
-    </div>
+    </nav>
   </header>
 
   <section class="page-content">
