--- a/student.html
+++ b/student.html
@@ -15,25 +15,25 @@
   <link rel="stylesheet" href="css/unified-theme.css">
 </head>
 <body>
-    <header>
-        <nav class="container">
-            <a href="/" class="logo">
-                <i class="fas fa-briefcase"></i>
-                OnlyWork
-            </a>
-            <ul class="nav-links">
-                <li><a href="#features">Features</a></li>
-                <li><a href="#testimonials">Success Stories</a></li>
-                <li class="divider"></li>
-                <li><a href="/student.html">For Students</a></li>
-                <li><a href="/index.html">For Employers</a></li>
-            </ul>
-            <a href="/register.html" class="cta-button">Apply Now</a>
-            <div class="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
-        </nav>
-    </header>
+  <header id="header">
+    <nav class="container">
+      <a href="/" class="logo">
+        <i class="fas fa-briefcase"></i>
+        OnlyWorks
+      </a>
+      <ul class="nav-links">
+        <li><a href="#features">Features</a></li>
+        <li><a href="#testimonials">Success Stories</a></li>
+        <li class="divider"></li>
+        <li><a href="/student.html">For Students</a></li>
+        <li><a href="/index.html">For Employers</a></li>
+      </ul>
+      <a href="/register.html" class="cta-button">Apply Now</a>
+      <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+      </div>
+    </nav>
+  </header>
 
   <section class="hero">
     <div class="container hero-content">
