--- a/index.html
+++ b/index.html
@@ -206,43 +206,6 @@
       </button>
     </div>
   </section>
-
-        <section class="stats">
-            <div class="container">
-                <h2 class="section-title">Join Our Growing Community</h2>
-                <p class="section-subtitle">Connecting students with opportunities since 2024</p>
-                
-                <div class="stats-grid">
-                    <div class="stat-item">
-                        <h3>10,000+</h3>
-                        <p>Students Registered</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>1,500+</h3>
-                        <p>Employers Onboarded</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>5,000+</h3>
-                        <p>Jobs Posted</p>
-                    </div>
-                    <div class="stat-item">
-                        <h3>4.8/5</h3>
-                        <p>Average Satisfaction Rating</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="contact" id="contact">
-            <div class="container">
-                <h2 class="section-title">Get in Touch</h2>
-                <p class="section-subtitle">Have questions or need support? We're here to help!</p>
-                <form action="/submit-contact" method="POST" class="contact-form">
-                    <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
-                    <textarea name="message" placeholder="Your Message" required></textarea>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
     </main>
 
     <footer>
@@ -257,9 +220,10 @@
               OnlyWorks helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
             </p>
             <div class="footer-social">
-              <a href="https://www.linkedin.com/company/only-jobs-students/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
+  <a href="https://www.linkedin.com/company/only-jobs-students/" class="social-icon">
+    <span style="font-weight: bold; font-size: 0.9em;">in</span>
+  </a>
+</div>
           
           <div class="footer-links">
             <h4>Company</h4>
