--- a/employer_register.html
+++ b/employer_register.html
@@ -385,15 +385,11 @@
             schedule, connecting them directly with employers on campus and in
             their local communities.
           </p>
-          <div class="footer-social">
-            <a
-              href="https://www.linkedin.com/company/only-jobs-students/"
-              class="social-icon"
-              target="_blank"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-          </div>
-        </div>
+         <div class="footer-social">
+  <a href="https://www.linkedin.com/company/only-jobs-students/" class="social-icon">
+    <span style="font-weight: bold; font-size: 0.9em;">in</span>
+  </a>
+</div>
 
         <div class="footer-links">
           <h4>Company</h4>
