--- a/register.html
+++ b/register.html
@@ -258,16 +258,11 @@
           <p class="footer-desc">
             OnlyWork helps students find flexible part-time work that fits their schedule, connecting them directly with employers on campus and in their local communities.
           </p>
-          <div class="footer-social">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/107253271/admin/dashboard/" class="social-icon" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-discord"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-medium"></i></a>
-          </div>
-        </div>
+<div class="footer-social">
+  <a href="https://www.linkedin.com/company/only-jobs-students/" class="social-icon">
+    <span style="font-weight: bold; font-size: 0.9em;">in</span>
+  </a>
+</div>
         
         <div class="footer-links">
           <h4>Company</h4>
