--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="hero-img">
-        <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80" alt="Students working on campus">
+        <img src="https://www.thealternativeboard.com/blog/understanding-todays-job-seekers">
       </div>
     </div>
   </section>
