--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
         <li><a href="#testimonials">Success Stories</a></li>
         <li class="divider"></li>
         <li><a href="/student.html">For Students</a></li>
-        <li><a href="/index.html">For Employers</a></li>
+        <li><a href="/employer.html">For Employers</a></li>
       </ul>
       <a href="/register.html" class="cta-button">Apply Now</a>
       <div class="mobile-menu-btn">
