--- a/index.html
+++ b/index.html
@@ -12,93 +12,6 @@
     
     <!-- Use your existing stylesheet -->
     <link rel="stylesheet" href="css/unified-theme.css">
-    
-    <!-- Custom styles for landing page user type cards -->
-    <style>
-        .user-types {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin: 3rem 0;
-        }
-
-        .user-card {
-            background: white;
-            border-radius: var(--radius-xl);
-            padding: 2.5rem;
-            box-shadow: var(--shadow-md);
-            transition: var(--transition);
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-            cursor: pointer;
-            text-decoration: none;
-            color: inherit;
-            border: 1px solid var(--gray-200);
-        }
-
-        .user-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary) 0%, var(--accent) 100%);
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-        }
-
-        .user-card:hover {
-            transform: translateY(-8px);
-            box-shadow: var(--shadow-lg);
-            color: inherit;
-            text-decoration: none;
-        }
-
-        .user-card:hover::before {
-            transform: translateX(0);
-        }
-
-        .user-icon {
-            width: 80px;
-            height: 80px;
-            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0 auto 1.5rem;
-            font-size: 2rem;
-            color: white;
-            transition: var(--transition);
-        }
-
-        .user-card:hover .user-icon {
-            transform: scale(1.1);
-            background: linear-gradient(135deg, var(--accent) 0%, var(--primary) 100%);
-        }
-
-        .user-card h3 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-            color: var(--gray-900);
-        }
-
-        .user-card p {
-            color: var(--gray-600);
-            margin-bottom: 1.5rem;
-            line-height: 1.7;
-        }
-
-        .hero-gradient {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-    </style>
 </head>
 <body>
     <!-- Header using your existing structure -->
@@ -127,6 +40,9 @@
                 <p class="hero-subtitle" style="text-align: center;">
                     The platform connecting students with flexible work opportunities and employers with talented student workers. Choose your path below.
                 </p>
+                <div class="hero-img">
+                 <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80" alt="Students working on campus">
+                </div>
 
                 <!-- User Type Selection Cards -->
                 <div class="user-types">
