--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <i class="fas fa-building"></i>
             I'm an Employer
           </button>
+          <button class="btn btn-secondary" onclick="location.href='https://onlyworks-llm.vercel.app/'">
+            <i class="fas fa-building"></i>
+            Try Our Product.
+          </button>
         </div>
       </div>
       <div class="hero-img">
@@ -84,6 +88,18 @@
           <button class="btn btn-primary btn-sm" onclick="location.href='index.html'">
             <i class="fas fa-arrow-right"></i>
             Employer Portal
+          </button>
+        </div>
+
+                <div class="feature-card">
+          <div class="feature-icon">
+            <i class="fas fa-building"></i>
+          </div>
+          <h3 class="feature-title">For Employers</h3>
+          <p class="feature-desc">Try our premium product for free!</p>
+          <button class="btn btn-primary btn-sm" onclick="location.href='https://onlyworks-llm.vercel.app/'">
+            <i class="fas fa-arrow-right"></i>
+            Try Our Product
           </button>
         </div>
         
