--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OnlyWorks | Choose Your Path</title>
+  <title>OnlyWorks</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/unified-theme.css">
@@ -19,11 +19,9 @@
         OnlyWorks
       </a>
       <ul class="nav-links">
-        <li><a href="#features">Features</a></li>
+        <li><a href="#features">Pricing</a></li>
         <li><a href="#testimonials">Success Stories</a></li>
         <li class="divider"></li>
-        <li><a href="/student.html">For Students</a></li>
-        <li><a href="/index.html">For Employers</a></li>
       </ul>
       <a href="/register.html" class="cta-button">Get Started</a>
       <div class="mobile-menu-btn">
@@ -35,21 +33,19 @@
   <section class="hero">
     <div class="container hero-content">
       <div class="hero-text">
-        <h1 class="hero-title">Choose Your Path</h1>
-        <p class="hero-subtitle">OnlyWorks connects students with flexible work opportunities and helps employers find talented student workers. Select your role to get started.</p>
+        <h1 class="hero-title">Work Smarter</h1>
+        <p class="hero-subtitle">OnlyWorks allows you to track your progress and efficiency.</p>
         <div class="hero-btns">
-          <button class="btn btn-primary" onclick="location.href='student.html'">
+          
+          <button class="btn btn-primary" onclick="location.href='https://onlyworks-llm.vercel.app/'">
             <i class="fas fa-graduation-cap"></i>
-            I'm a Student
-          </button>
-          <button class="btn btn-secondary" onclick="location.href='index.html'">
-            <i class="fas fa-building"></i>
-            I'm an Employer
+            Start recording now
           </button>
           <button class="btn btn-secondary" onclick="location.href='https://onlyworks-llm.vercel.app/'">
-            <i class="fas fa-rocket"></i>
-            Try Our Product
+            <i class="fas fa-building"></i>
+            Learn more
           </button>
+
         </div>
       </div>
       <div class="hero-img">
