--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +18,7 @@
         OnlyWorks
       </a>
       <ul class="nav-links">
-        <li><a href="#features">Pricing</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
         <li><a href="#testimonials">Success Stories</a></li>
         <li class="divider"></li>
       </ul>
