--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
       </a>
       <ul class="nav-links">
         <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="#testimonials">Success Stories</a></li>
+        <li><a href="#testimonials">About Us</a></li>
         <li class="divider"></li>
       </ul>
-      <a href="/register.html" class="cta-button">Get Started</a>
+      <a href="/register.html" class="cta-button">Start recording</a>
+      <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+      </div>
+      <a href="/register.html" class="cta-button">Sign in</a>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
