--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
         OnlyWorks
       </a>
       
-      <div class="nav-center">
+      <div class="nav-right">
         <a href="pricing.html">Pricing</a>
         <a href="#testimonials">About Us</a>
       </div>
