--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </a>
       <ul class="nav-links">
         <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="#testimonials">About Us</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li class="divider"></li>
       </ul>
       <a href="/register.html" class="cta-button">Start recording</a>
