--- a/index.html
+++ b/index.html
@@ -33,13 +33,11 @@
       <ul class="nav-links">
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="aboutus.html">About Us</a></li>
-        <li class="divider"></li>
+        <li><a href="/register.html"> class="cta-button">Sign in</a>
+      </div>
+
       </ul>
       <a href="/register.html" class="cta-button">Start recording</a>
-      <div class="mobile-menu-btn">
-        <i class="fas fa-bars"></i>
-      </div>
-      <a href="/register.html" class="cta-button">Sign in</a>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
