--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
       <ul class="nav-links">
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="/register.html"> class="cta-button">Sign in</a>
-      </div>
-
+        <li><a href="/register.html">Sign in</a>
+        <li class="divider"></li>
       </ul>
       <a href="/register.html" class="cta-button">Start recording</a>
       <div class="mobile-menu-btn">
