--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OnlyWorks | Work Your Way</title>
+  <title>OnlyWorks</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-ku9kS2VvHGKcSJklbSTxNfZb6buYsQZfVjWLUYl0F2pZ+UcQZ+g9Unu9cxUQD+XbJz5W4KczWcKyPNij1hYyKA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
@@ -12,23 +12,22 @@
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-  <link rel="stylesheet" href="css/unified-theme.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header id="header">
     <nav class="container">
       <a href="/" class="logo">
-        <i class="fas fa-briefcase"></i>
+        <img src="logo.png" alt="OnlyWorks Logo">
         OnlyWorks
       </a>
       <ul class="nav-links">
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Success Stories</a></li>
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="/register.html">Sign in</a>
         <li class="divider"></li>
-        <li><a href="/student.html">For Students</a></li>
-        <li><a href="/employer.html">For Employers</a></li>
       </ul>
-      <a href="/register.html" class="cta-button">Apply Now</a>
+      <a href="https://onlyworks-llm.vercel.app/'" class="cta-button">Start recording</a>
       <div class="mobile-menu-btn">
         <i class="fas fa-bars"></i>
       </div>
