--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div class="container hero-content">
       <div class="hero-text">
         <h1 class="hero-title">Work Smarter</h1>
-        <p class="hero-subtitle">OnlyWorks allows you to track your progress and efficiency.</p>
+        <p class="hero-subtitle">OnlyWorks allows you to track your progress and efficiency. We work directly with businesses to understand their needs, then match them with reliable student talent who are ready to contribute. Our goal is to streamline the hiring process no more ghosting, no more unqualified matches just the right fit, faster. We believe every student deserves the chance to earn and grow. And every business deserves talent they can count on.
+</p>
         <div class="hero-btns">
           
           <button class="btn btn-primary" onclick="location.href='https://onlyworks-llm.vercel.app/'">
