--- a/pricing.html
+++ b/pricing.html
@@ -22,6 +22,7 @@
       <ul class="nav-links">
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="team.html">Meet The team</a></li>
         <li><a href="/register.html">Sign in</a>
         <li class="divider"></li>
       </ul>
