--- a/aboutus.html
+++ b/aboutus.html
@@ -12,9 +12,31 @@
   <link rel="shortcut icon" href="logo.png" type="image/png">
   <link rel="apple-touch-icon" href="logo.png">
 </head>
-<h1>At only works...</h1>
-<p>
-we operate a platform built on trust, speed, and real value for both students and businesses.
+  <header id="header">
+    <nav class="container">
+      <a href="/" class="logo">
+        <img src="logo.png" alt="OnlyWorks Logo">
+        OnlyWorks
+      </a>
+      <ul class="nav-links">
+        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="/register.html">Sign in</a>
+        <li class="divider"></li>
+      </ul>
+      <a href="/register.html" class="cta-button">Start recording</a>
+      <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+      </div>
+    </nav>
+  </header>
+  
+<body>
+<section class="hero">
+    <div class="container hero-content">
+      <div class="hero-text">
+        <h1 class="hero-title">At only works..</h1>
+        <p class="hero-subtitle">we operate a platform built on trust, speed, and real value for both students and businesses.
 
 We work directly with businesses to understand their needs, then match them with reliable student talent who are ready to contribute. Our goal is to streamline the hiring process no more ghosting, no more unqualified matches just the right fit, faster. We believe every student deserves the chance to earn and grow. And every business deserves talent they can count on.
 
@@ -30,4 +52,8 @@ Curious? Stay tuned. The future of work is unfolding.
 
 Onlyworks. Verified jobs. Real students. Smarter hiring. That's what only works.
 </p>
+      </div>
+    </div>
+</section>
+</body>
 </html>
