--- a/team.html
+++ b/team.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OnlyWorks</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"> 
+  <title>OnlyWorks - Meet Our Team</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
   
@@ -12,7 +12,8 @@
   <link rel="shortcut icon" href="logo.png" type="image/png">
   <link rel="apple-touch-icon" href="logo.png">
 </head>
-<header id="header">
+<body>
+  <header id="header">
     <nav class="container">
       <a href="/" class="logo">
         <img src="logo.png" alt="OnlyWorks Logo">
@@ -22,7 +23,7 @@
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="team.html">Meet The team</a></li>
-        <li><a href="/register.html">Sign in</a>
+        <li><a href="/register.html">Sign in</a></li>
         <li class="divider"></li>
       </ul>
       <a href="/register.html" class="cta-button">Start recording</a>
@@ -31,7 +32,7 @@
       </div>
     </nav>
   </header>
-<body>
+
   <section class="features" id="features">
     <div class="container">
       <h2 class="section-title">Meet Our Team</h2>
@@ -40,7 +41,7 @@
       <div class="features-grid">
         <div class="feature-card">
           <div class="feature-icon">
-            <img src="https://media.licdn.com/dms/image/v2/D4E03AQEL9eQ3-N1NZQ/profile-displayphoto-shrink_800_800/B4EZbMrU3ZGcAc-/0/1747190632317?e=1758758400&v=beta&t=2ZfYlmFzQJ1RiBy4dIjpGHpluk0NH-SlGVxIDD-5fTs">
+            <img src="https://media.licdn.com/dms/image/v2/D4E03AQEL9eQ3-N1NZQ/profile-displayphoto-shrink_800_800/B4EZbMrU3ZGcAc-/0/1747190632317?e=1758758400&v=beta&t=2ZfYlmFzQJ1RiBy4dIjpGHpluk0NH-SlGVxIDD-5fTs" alt="Brodey Wang" style="width: 100%; height: 100%; object-fit: cover; border-radius: 4px;">
           </div>
           <h3 class="feature-title">Brodey Wang</h3>
           <p class="feature-desc">CEO</p>
@@ -50,10 +51,9 @@
           </button>
         </div>
         
-      <div class="features-grid">
         <div class="feature-card">
           <div class="feature-icon">
-            <img src="https://media.licdn.com/dms/image/v2/D4E03AQFH2H25hypK2Q/profile-displayphoto-shrink_800_800/B4EZW1iLVmGgAg-/0/1742507390612?e=1758758400&v=beta&t=vDipuPq2A2hLwlM3wswuspUTCYlfZ5J8F-ls7qRtOiU">
+            <img src="https://media.licdn.com/dms/image/v2/D4E03AQFH2H25hypK2Q/profile-displayphoto-shrink_800_800/B4EZW1iLVmGgAg-/0/1742507390612?e=1758758400&v=beta&t=vDipuPq2A2hLwlM3wswuspUTCYlfZ5J8F-ls7qRtOiU" alt="Namkha Tashi Oedzer" style="width: 100%; height: 100%; object-fit: cover; border-radius: 4px;">
           </div>
           <h3 class="feature-title">Namkha Tashi Oedzer</h3>
           <p class="feature-desc">CTO</p>
