--- a/aboutus.html
+++ b/aboutus.html
@@ -21,6 +21,7 @@
       <ul class="nav-links">
         <li><a href="pricing.html">Pricing</a></li>
         <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="team.html">Meet The Team</li>
         <li><a href="/register.html">Sign in</a>
         <li class="divider"></li>
       </ul>
